crates/solidity/testing/snapshots/bindings_output/contracts/public_getter_selector/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[ input.sol:2:27 ]
   │
 2 │     function x() external view returns (uint);
   │                           ──────────┬──────────  
   │                                     ╰──────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:6:26 ]
   │
 6 │     uint public override x;
   │                          ┬  
   │                          ╰── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ interface Face {
   │           ──┬─  
   │             ╰─── name: 1
 2 │     function x() external view returns (uint);
   │              ┬  
   │              ╰── name: 2
   │ 
 5 │ contract Test is Face {
   │          ──┬─  
   │            ╰─── name: 3
 6 │     uint public override x;
   │                 ────┬───  
   │                     ╰───── name: 4
   │ 
 8 │     function test() internal {
   │              ──┬─  
   │                ╰─── name: 5
   │
   ├─[ input.sol:1:1 ]
   │
 5 │ contract Test is Face {
   │                  ──┬─  
   │                    ╰─── ref: 1
   │ 
 9 │         this.x.selector;
   │              ┬ ────┬───  
   │              ╰─────────── ref: 2
   │                    │     
   │                    ╰───── unresolved
───╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ interface Face {
    ┆ ┆   
  3 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │         function x() external view returns (uint);
    │     ────────────┬────────────  
    │                 ╰────────────── definiens: 2
    │ 
  4 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  6 │ │       uint public override x;
    │ │   ──────────────┬─────────────  
    │ │                 ╰─────────────── definiens: 4
  7 │ ╭─▶ 
    ┆ ┆   
 10 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 5
────╯
